--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
       </div>
     </div>
     <script type="module" src="/src/index.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
   </body>
 </html>
